css/style.css
/* ... */
.current .user-navigation-link {
  text-decoration: none;
}

.current .user-navigation-link::after {
  position: absolute;
  content: "";
  top: 36px;
  left: -37px;
  width: 112px;
  height: 2px;
  background-color: var(--basic-red);
}

.nav a:hover,
.nav a:focus {
  color: var(--basic-red);
  outline: none;
}
.nav a:active {
  color: var(--basic-black);
  opacity: 0.3;
}

/* user nav */

.user-navigation {
  display: flex;
  flex-wrap: wrap;
}

.user-navigation-link {
  position: relative;
}

.user-navigation-link::before {
  content: "";
  position: absolute;
  top: 6px;
  left: -40px;
  width: 15px;
  height: 15px;
  background-image: url(/img/cart-icon.svg);
  background-repeat: no-repeat;
}

/*Promo*/

.promo {
  background-color: var(--header-bg-light-grey);
  margin-bottom: 80px;
}

.promo .container {
  position: relative;
}

.promo-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.promo-list-item {
  min-height: 431px;
  background-repeat: no-repeat;
  background-position: right;
}

.promo-item-slide1 {
  background-image: url(/img/slide1.png);
}

.promo-item-slide2 {
  background-image: url(/img/slide2.png);
}

.promo-item-slide3 {
  background-image: url(/img/slide3.png);
}

.promo-item-title {
  margin: 0;
  padding: 0;
  padding-top: 78px;
  padding-bottom: 25px;
  max-width: 425px;
  font-weight: 500;
  font-size: 55px;
  line-height: 55px;
  color: var(--basic-black);
}

promo-item-text {
  max-width: 425px;
  padding: 0;
  margin: 0;
  margin-bottom: 38px;
}

.button-promo {
  display: block;
  margin-top: 38px;
  margin-bottom: 80px;
  box-sizing: border-box;
  width: 240px;
  height: 50px;
  text-align: center;
  padding-left: 54;
  padding-right: 54;
  background-color: var(--basic-red);
}

.button-promo:hover,
.button-color-red:hover,
.button-contacts:hover,
.button-promo:focus,
.button-color-red:focus,
.button-contacts:focus {
  background-color: var(--basic-red-hover);
}

.button-promo:active,
.button-color-red:active,
.button-contacts:active {
  background-color: var(--basic-red-click);
  color: var(--basic-white-opacity);
}

.slider-controls {
  position: absolute;
  top: 315px;
  left: 563px;
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
}

.slider-controls-item:not(:last-child) {
  margin-right: 17px;
}

.slider-control {
  position: relative;
  border: none;
  background-color: var(--basic-white);
  width: 18px;
  height: 18px;
  border-radius: 50%;
  cursor: pointer;
}
.slider-control-active::after {
  position: absolute;
  content: "";
  box-sizing: border-box;
  top: 5px;
  left: 5px;
  width: 8px;
  height: 8px;
  background-color: var(--basic-white);
  border: 2px solid var(--basic-light-grey);
  border-radius: 50%;
}


/* Service */

.service {
  position: relative;
  margin-bottom: 155px;
}

.service::after {
  content: "";
  position: absolute;
  top: 427px;

  width: 1158px;
  height: 2px;
  background-color: var(--header-bg-light-grey);
}

.service-list {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 100px;
  margin: 0;
  padding: 0;
  list-style: none;
}

.service-list-item {
  width: 300px;
  padding-top: 146px;
  background-repeat: no-repeat;
  background-position: top left;
}

.service-item-site {
  background-image: url(/img/features-1.jpg);
}

.service-item-apps {
  background-image: url(/img/features-2.jpg);
}

.service-item-presentation {
  background-image: url(/img/features-3.jpg);
}

.service-item-title {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 24px;
  line-height: 30px;
  margin-bottom: 16px;
  color: var(--basic-black);
}

.service-item-text {
  margin-bottom: 32px;
}

.button-services {
  display: block;
  width: min-content;
  padding-left: 39px;
  padding-right: 40px;
}

.button-color-red {
  background-color: var(--basic-red);
}

.button-color-green {
  background-color: var(--basic-green);
}

.button-color-green:hover,
.button-color-green:focus {
  background-color: var(--basic-green-hover);
}

.button-color-green:active {
  background-color: var(--basic-green-click);
  color: var(--basic-white-opacity);
}

.button-color-yellow {
  background-color: var(--basic-yellow);
}

.button-color-yellow:hover,
.button-color-yellow:focus {
  background-color: var(--basic-yellow-hover);
}

.button-color-yellow:active {
  background-color: var(--basic-yellow-click);
  color: var(--basic-white-opacity);
}

/* About */

.about {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 20px;
  background-image: url(/img/nerds-illustration\ 1.jpg);
  background-repeat: no-repeat;
  background-position: top right 16px;
  margin-bottom: 73px;
}

.about-title {
  grid-column: 1 / -1;
  margin: 0;
  padding: 0;
  max-width: 780px;
  margin-top: 34px;
  margin-bottom: 12px;
  font-weight: 500;
  font-size: 45px;
  line-height: 45px;
}

.about-text {
  grid-column: 1 / -1;
  max-width: 780px;
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
}

.features-list-title {
  grid-column: 1 / 2;
  font-weight: 700;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.features-list {
  grid-column: 1 / 3;
  list-style: none;
  margin: 0;
  margin-left: 37px;
  padding: 0;
}

.features-list-item {
  position: relative;
}

.features-list-item::before {
  content: "";
  position: absolute;
  top: 12px;
  left: -37px;
  width: 25px;
  height: 2px;
  background-color: var(--basic-red);
}

.about-list-title {
  grid-column: 3 / -1;
  grid-row: 3 / 4;
  font-weight: 700;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.about-desc-list {
  margin: 0;
  padding: 0;
  grid-column: 3 / -1;
  width: 360px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.about-desc-item {
  display: flex;
  flex-direction: column;
}

.description-title {
  order: 2;
  line-height: 18px;
  grid-row: 2 / -1;
}

.description-definition {
  order: 1;
  margin: 0;
  font-weight: 700;
  font-size: 45px;
  line-height: 64px;
}
/* ... */

